infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-pages
  labels:
    app: github-pages
spec:
  selector:
    app: github-pages
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
